// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTP Client with logger should log a DELETE request 1`] = `
Array [
  Promise {},
  "URL",
  Object {
    "method": "DELETE",
    "options": "options",
  },
]
`;

exports[`HTTP Client with logger should log a GET request 1`] = `
Array [
  Promise {},
  "URL",
  Object {
    "method": "GET",
    "options": "options",
  },
]
`;

exports[`HTTP Client with logger should log a POST request 1`] = `
Array [
  Promise {},
  "URL",
  Object {
    "body": "{\\"hello\\":\\"world\\"}",
    "method": "POST",
  },
]
`;

exports[`HTTP Client with logger should log a PUT request 1`] = `
Array [
  Promise {},
  "URL",
  Object {
    "method": "PUT",
    "options": "options",
  },
]
`;

exports[`HTTP Client without logger should perform a DELETE request 1`] = `
Array [
  "/test/",
  Object {
    "method": "DELETE",
    "options": "options",
  },
]
`;

exports[`HTTP Client without logger should perform a GET request 1`] = `
Array [
  "/test/",
  Object {
    "method": "GET",
    "options": "options",
  },
]
`;

exports[`HTTP Client without logger should perform a GET request 2`] = `"/test/"`;

exports[`HTTP Client without logger should perform a POST request 1`] = `
Array [
  "/test/",
  Object {
    "body": "{\\"hello\\":\\"world\\"}",
    "method": "POST",
  },
]
`;

exports[`HTTP Client without logger should perform a PUT request 1`] = `
Array [
  "/test/",
  Object {
    "method": "PUT",
    "options": "options",
  },
]
`;

exports[`HTTP Client without logger should throw an error in the case of 4xx error 1`] = `[Error: Not Found]`;

exports[`HTTP Client without logger should throw an error in the case of 4xx error 2`] = `
Object {
  "headers": Object {},
  "payload": Object {
    "error": "Not Found",
    "message": "Not Found",
    "statusCode": 404,
  },
  "statusCode": 404,
}
`;

exports[`HTTP Client without logger should throw an error in the case of 5xx error 1`] = `[Error: Internal Server Error]`;

exports[`HTTP Client without logger should throw an error in the case of 5xx error 2`] = `
Object {
  "headers": Object {},
  "payload": Object {
    "error": "Internal Server Error",
    "message": "An internal server error occurred",
    "statusCode": 500,
  },
  "statusCode": 500,
}
`;
